--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d521a4887481751206eda4b908006306a42fbd5d22852f1ae810d5a1ae06a3f3"
+  "signature": "sha256:3a63fd50e30b59192685869ed8813a451aa5943b57bf8a9b9d945526ebe69fe4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -91,9 +91,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cubic_sym = np.zeros((3, 3, 1))\n",
+      "cubic_sym = np.zeros((3, 3, 24))\n",
       "\n",
       "\n",
+      "# cubic_sym[:,:,0] = [[ 1, 0, 0], [ 0, 0, 1], [ 0,-1, 0]]\n",
       "# cubic_sym[:,:,0] =[[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]] \n",
       "# cubic_sym[:,:,1] = [[ 1, 0, 0], [ 0, 0, 1], [ 0,-1, 0]]\n",
       "# cubic_sym[:,:,2] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]] \n",
@@ -101,29 +102,29 @@
       "# cubic_sym[:,:,4] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]]\n",
       "\n",
       "cubic_sym[:,:,0] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]] \n",
-      "# cubic_sym[:,:,1] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]] \n",
-      "# cubic_sym[:,:,2] = [[ 1, 0, 0], [ 0, 0,-1], [ 0, 1, 0]] \n",
-      "# cubic_sym[:,:,3] = [[ 1, 0, 0], [ 0, 0, 1], [ 0,-1, 0]]\n",
-      "# cubic_sym[:,:,4] = [[-1, 0, 0], [ 0, 1, 0], [ 0, 0,-1]] \n",
-      "# cubic_sym[:,:,5] = [[-1, 0, 0], [ 0,-1, 0], [ 0, 0, 1]]\n",
-      "# cubic_sym[:,:,6] = [[-1, 0, 0], [ 0, 0,-1], [ 0,-1, 0]] \n",
-      "# cubic_sym[:,:,7] = [[-1, 0, 0], [ 0, 0, 1], [ 0, 1, 0]]\n",
-      "# cubic_sym[:,:,8] = [[ 0, 1, 0], [-1, 0, 0], [ 0, 0, 1]]\n",
-      "# cubic_sym[:,:,9] = [[ 0, 1, 0], [ 0, 0,-1], [-1, 0, 0]] \n",
-      "# cubic_sym[:,:,10] =[[ 0, 1, 0], [ 1, 0, 0], [ 0, 0,-1]] \n",
-      "# cubic_sym[:,:,11] =[[ 0, 1, 0], [ 0, 0, 1], [ 1, 0, 0]]\n",
-      "# cubic_sym[:,:,12] =[[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]] \n",
-      "# cubic_sym[:,:,13] =[[ 0,-1, 0], [ 0, 0,-1], [ 1, 0, 0]] \n",
-      "# cubic_sym[:,:,14] =[[ 0,-1, 0], [-1, 0, 0], [ 0, 0,-1]]\n",
-      "# cubic_sym[:,:,15] =[[ 0,-1, 0], [ 0, 0, 1], [-1, 0, 0]]\n",
-      "# cubic_sym[:,:,16] =[[ 0, 0, 1], [ 0, 1, 0], [-1, 0, 0]] \n",
-      "# cubic_sym[:,:,17] =[[ 0, 0, 1], [ 1, 0, 0], [ 0, 1, 0]] \n",
-      "# cubic_sym[:,:,18] =[[ 0, 0, 1], [ 0,-1, 0], [ 1, 0, 0]] \n",
-      "# cubic_sym[:,:,19] =[[ 0, 0, 1], [-1, 0, 0], [ 0,-1, 0]]\n",
-      "# cubic_sym[:,:,20] =[[ 0, 0,-1], [ 0, 1, 0], [ 1, 0, 0]] \n",
-      "# cubic_sym[:,:,21] =[[ 0, 0,-1], [-1, 0, 0], [ 0, 1, 0]]\n",
-      "# cubic_sym[:,:,22] =[[ 0, 0,-1], [ 0,-1, 0], [-1, 0, 0]] \n",
-      "# cubic_sym[:,:,23] =[[ 0, 0,-1], [ 1, 0, 0], [ 0,-1, 0]]\n"
+      "cubic_sym[:,:,1] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,2] = [[ 1, 0, 0], [ 0, 0,-1], [ 0, 1, 0]] \n",
+      "cubic_sym[:,:,3] = [[ 1, 0, 0], [ 0, 0, 1], [ 0,-1, 0]]\n",
+      "cubic_sym[:,:,4] = [[-1, 0, 0], [ 0, 1, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,5] = [[-1, 0, 0], [ 0,-1, 0], [ 0, 0, 1]]\n",
+      "cubic_sym[:,:,6] = [[-1, 0, 0], [ 0, 0,-1], [ 0,-1, 0]] \n",
+      "cubic_sym[:,:,7] = [[-1, 0, 0], [ 0, 0, 1], [ 0, 1, 0]]\n",
+      "cubic_sym[:,:,8] = [[ 0, 1, 0], [-1, 0, 0], [ 0, 0, 1]]\n",
+      "cubic_sym[:,:,9] = [[ 0, 1, 0], [ 0, 0,-1], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,10] =[[ 0, 1, 0], [ 1, 0, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,11] =[[ 0, 1, 0], [ 0, 0, 1], [ 1, 0, 0]]\n",
+      "cubic_sym[:,:,12] =[[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]] \n",
+      "cubic_sym[:,:,13] =[[ 0,-1, 0], [ 0, 0,-1], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,14] =[[ 0,-1, 0], [-1, 0, 0], [ 0, 0,-1]]\n",
+      "cubic_sym[:,:,15] =[[ 0,-1, 0], [ 0, 0, 1], [-1, 0, 0]]\n",
+      "cubic_sym[:,:,16] =[[ 0, 0, 1], [ 0, 1, 0], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,17] =[[ 0, 0, 1], [ 1, 0, 0], [ 0, 1, 0]] \n",
+      "cubic_sym[:,:,18] =[[ 0, 0, 1], [ 0,-1, 0], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,19] =[[ 0, 0, 1], [-1, 0, 0], [ 0,-1, 0]]\n",
+      "cubic_sym[:,:,20] =[[ 0, 0,-1], [ 0, 1, 0], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,21] =[[ 0, 0,-1], [-1, 0, 0], [ 0, 1, 0]]\n",
+      "cubic_sym[:,:,22] =[[ 0, 0,-1], [ 0,-1, 0], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,23] =[[ 0, 0,-1], [ 1, 0, 0], [ 0,-1, 0]]\n"
      ],
      "language": "python",
      "metadata": {},
@@ -252,7 +253,8 @@
         "Matrix([[-sin(a + phi1)*sin(c + phi2)*cos(Phi + b) + cos(a + phi1)*cos(c + phi2), sin(a + phi1)*cos(c + phi2) + sin(c + phi2)*cos(Phi + b)*cos(a + phi1), sin(Phi + b)*sin(c + phi2)], [-sin(a + phi1)*cos(Phi + b)*cos(c + phi2) - sin(c + phi2)*cos(a + phi1), -sin(a + phi1)*sin(c + phi2) + cos(Phi + b)*cos(a + phi1)*cos(c + phi2), sin(Phi + b)*cos(c + phi2)], [sin(Phi + b)*sin(a + phi1), -sin(Phi + b)*cos(a + phi1), cos(Phi + b)]])\n"
        ]
       }
-     ]
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -266,9 +268,8 @@
       "\n",
       "for ii in range(cubic_sym.shape[-1]):\n",
       "    system = orientaiton_matrix * cubic_sym[..., ii] - orientaiton_matrixabc\n",
-      "    tmp = system.subs(tansbs)\n",
-      "    print tmp\n",
-      "    sol = sy.solve(tmp, a, b, c)\n",
+      "#     tmp = system.subs(tansbs)\n",
+      "    sol = sy.solve(system, a, b, c)\n",
       "#     if 0 in sol[0]:\n",
       "# #         print 'here'\n",
       "#         if 0 in sol[1]:\n",
@@ -288,7 +289,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[(-phi1 - asin(sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 + acos(-sqrt(-sin(Phi)**2*cos(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(-cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(sin(Phi)*cos(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*cos(phi1)), -phi2 + acos(-sqrt(-(-sin(phi1)*sin(phi2) + cos(Phi)*cos(phi1)*cos(phi2))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 - asin(sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(-cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 - asin(sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(sin(Phi)*cos(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*cos(phi1)), -phi2 + acos(-sqrt(-(-sin(phi1)*sin(phi2) + cos(Phi)*cos(phi1)*cos(phi2))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(sin(Phi)*cos(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(-cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*cos(phi1)), -phi2 + acos(-sqrt(-(-sin(phi1)*sin(phi2) + cos(Phi)*cos(phi1)*cos(phi2))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 - asin(sqrt(-sin(Phi)**2*cos(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(sin(Phi)*cos(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-sin(Phi)**2*sin(phi1)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0)))), -Phi + acos(-cos(Phi)), -phi2 - asin(sqrt(-sin(Phi)**2*sin(phi2)**2/((cos(Phi) - 1.0)*(cos(Phi) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*cos(phi1)), -phi2 + acos(-sqrt(-(-sin(phi1)*sin(phi2) + cos(Phi)*cos(phi1)*cos(phi2))**2/((sin(Phi)*cos(phi1) - 1.0)*(sin(Phi)*cos(phi1) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(sin(Phi)*sin(phi1)), -phi2 + acos(-sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(sin(Phi)*sin(phi1)), -phi2 + acos(-sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(sin(Phi)*sin(phi1)), -phi2 + acos(-sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(sin(Phi)*sin(phi1)), -phi2 + acos(-sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*sin(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*sin(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 - asin(sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*sin(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0))))), (-phi1 + acos(-sqrt(-cos(Phi)**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))), -Phi + acos(-sin(Phi)*sin(phi1)), -phi2 - asin(sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/((sin(Phi)*sin(phi1) - 1.0)*(sin(Phi)*sin(phi1) + 1.0)))))]\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -299,7 +309,7 @@
       "print system\n",
       "\n",
       "arcsubs = {sy.acos(sy.cos(Phi)):Phi, sy.asin(1.0*sy.sin(phi1)):phi1, sy.asin(1.0*sy.sin(phi2)):phi2}\n",
-      "tmp = (cubic_sols[0][2]).subs(arcsubs)\n",
+      "tmp = cubic_sols[0][2].subs(arcsubs)\n",
       "# print tmp\n",
       "ans = tmp.subs({phi1:0., Phi:0., phi2:0.})\n",
       "# print ans\n",
@@ -308,7 +318,148 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Matrix([[1.0*sin(phi1)*cos(phi2) + 1.0*sin(phi2)*cos(Phi)*cos(phi1) + sin(a + phi1)*sin(c + phi2)*cos(Phi + b) - cos(a + phi1)*cos(c + phi2), -1.0*sin(Phi)*sin(phi2) - sin(a + phi1)*cos(c + phi2) - sin(c + phi2)*cos(Phi + b)*cos(a + phi1), 1.0*sin(phi1)*sin(phi2)*cos(Phi) - sin(Phi + b)*sin(c + phi2) - 1.0*cos(phi1)*cos(phi2)], [-1.0*sin(phi1)*sin(phi2) + sin(a + phi1)*cos(Phi + b)*cos(c + phi2) + sin(c + phi2)*cos(a + phi1) + 1.0*cos(Phi)*cos(phi1)*cos(phi2), -1.0*sin(Phi)*cos(phi2) + sin(a + phi1)*sin(c + phi2) - cos(Phi + b)*cos(a + phi1)*cos(c + phi2), 1.0*sin(phi1)*cos(Phi)*cos(phi2) + 1.0*sin(phi2)*cos(phi1) - sin(Phi + b)*cos(c + phi2)], [-1.0*sin(Phi)*cos(phi1) - sin(Phi + b)*sin(a + phi1), sin(Phi + b)*cos(a + phi1) - 1.0*cos(Phi), -1.0*sin(Phi)*sin(phi1) - cos(Phi + b)]])\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Tmp cell\n",
+      "\n",
+      "ans = []\n",
+      "\n",
+      "arcsubs = {sy.acos(sy.cos(Phi)):Phi, sy.asin(1.0*sy.sin(phi1)):phi1, sy.asin(1.0*sy.sin(phi2)):phi2}\n",
+      "print len(cubic_sols)\n",
+      "for i in range(len(cubic_sols)):\n",
+      "    anssubs = {a: cubic_sols[i][0], b: cubic_sols[i][1], c: cubic_sols[i][2]}\n",
+      "    # print anssubs\n",
+      "    tmpsubs = anssubs.copy()\n",
+      "    tmpsubs.update(arcsubs)\n",
+      "    tmp = system.subs(tmpsubs)\n",
+      "    # print tmp\n",
+      "    ans.append(tmp.subs({phi1:0., Phi:0., phi2:0.}))\n",
+      "print ans"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "24\n",
+        "[Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,  -1]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,   1]]), Matrix([\n",
+        "[1.0,    0, -1.0],\n",
+        "[1.0,    0,   -1],\n",
+        "[  0, -2.0,    0]]), Matrix([\n",
+        "[-1.0,    0, -1.0],\n",
+        "[ 1.0,    0,  1.0],\n",
+        "[   0, -2.0,    0]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,   1]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,  -1]]), Matrix([\n",
+        "[1.0,    0, -1.0],\n",
+        "[1.0,    0,   -1],\n",
+        "[  0, -2.0,    0]]), Matrix([\n",
+        "[-1.0,    0, -1.0],\n",
+        "[ 1.0,    0,  1.0],\n",
+        "[   0, -2.0,    0]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,  -1]]), Matrix([\n",
+        "[  0,  1.0, -1.0],\n",
+        "[1.0,    0,   -1],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,   1]]), Matrix([\n",
+        "[  0, -1.0, -1.0],\n",
+        "[1.0,    0,  1.0],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,  -1]]), Matrix([\n",
+        "[  0,  1.0, -1.0],\n",
+        "[1.0,    0,   -1],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan, nan],\n",
+        "[nan, nan,   1]]), Matrix([\n",
+        "[  0, -1.0, -1.0],\n",
+        "[1.0,    0,  1.0],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[  0,    0, -2.0],\n",
+        "[1.0, -1.0,    0],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[0,    0, -2.0],\n",
+        "[0,    0,    0],\n",
+        "[0, -2.0,    0]]), Matrix([\n",
+        "[  0,    0, -2.0],\n",
+        "[1.0, -1.0,    0],\n",
+        "[1.0, -1.0,    0]]), Matrix([\n",
+        "[0,    0, -2.0],\n",
+        "[0,    0,    0],\n",
+        "[0, -2.0,    0]]), Matrix([\n",
+        "[  0,    0, 0],\n",
+        "[1.0,  1.0, 0],\n",
+        "[1.0, -1.0, 0]]), Matrix([\n",
+        "[  0,    0, 0],\n",
+        "[2.0,    0, 0],\n",
+        "[  0, -2.0, 0]]), Matrix([\n",
+        "[  0,    0, 0],\n",
+        "[1.0,  1.0, 0],\n",
+        "[1.0, -1.0, 0]]), Matrix([\n",
+        "[  0,    0, 0],\n",
+        "[2.0,    0, 0],\n",
+        "[  0, -2.0, 0]])]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print ans[23]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Matrix([[0, 0, 0], [2.00000000000000, 0, 0], [0, -2.00000000000000, 0]])\n"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
@@ -366,7 +517,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -391,7 +543,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "nan\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
