Add print statements to debug function
Address issue #141

Add print statements to debug function. We are still getting Nans for a
few of the coefficients.

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0d1d4fdf00cfcb4b55e3fdcfd8785d6b398e4e19e192aa0829463a7c46efde72"
+  "signature": "sha256:0a8ab64f8fdc45ae773a9d490f300b9324530ab840b60763b892d1566690a507"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,17 +23,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -51,7 +42,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -67,7 +58,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -87,7 +78,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -138,7 +129,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -170,7 +161,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -196,7 +187,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -228,7 +219,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -254,7 +245,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -271,7 +262,7 @@
       "\n",
       "for ii in range(cubic_sym.shape[-1]):\n",
       "    system = orientaiton_matrix * cubic_sym[..., ii] - orientaiton_matrixabc\n",
-      "    sol = sy.solve(system, a, b, c)[28]\n",
+      "    sol = sy.solve(system, a, b, c)[0]\n",
       "    simplified_sol = [sy.simplify(sol[j].subs(cos_sub)) for j in np.arange(3)]\n",
       "    cubic_sols.append(simplified_sol)\n",
       "    \n",
@@ -280,7 +271,37 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Tmp Cell - Look at solution values\n",
+      "\n",
+      "tmp_cubic_sols = []\n",
+      "for ii in cubic_sols:\n",
+      "#     print ii\n",
+      "    tmp = [jj.subs(arcsubs) for jj in ii]\n",
+      "#     print tmp\n",
+      "    tmp2 = [kk.subs({phi1: 0, Phi: 0, phi2: 0}) for kk in tmp]\n",
+      "#     print tmp2\n",
+      "    tmp_cubic_sols.append(tmp2)\n",
+      "#     print ''\n",
+      "print tmp_cubic_sols"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[0, 0, 0], [-pi, -pi, 0], [3.14159265358979, pi/2, 0], [3.14159265358979, pi/2, 3.14159265358979], [0, -pi, 0], [0, 0, 0], [3.14159265358979, pi/2, 0], [3.14159265358979, pi/2, 3.14159265358979], [-pi/2, 0, 0], [-1.57079632679490, pi/2, 0], [-pi/2, -pi, 0], [-1.57079632679490, pi/2, 3.14159265358979], [-pi/2, 0, 0], [-1.57079632679490, pi/2, 0], [-pi/2, -pi, 0], [-1.57079632679490, pi/2, 3.14159265358979], [-1.57079632679490, pi/2, pi/2], [3.14159265358979, pi/2, pi/2], [-1.57079632679490, pi/2, pi/2], [3.14159265358979, pi/2, pi/2], [-1.57079632679490, pi/2, -1.57079632679490], [3.14159265358979, pi/2, -1.57079632679490], [-1.57079632679490, pi/2, -1.57079632679490], [3.14159265358979, pi/2, -1.57079632679490]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -453,7 +474,7 @@
       "           sy.acos(sy.sqrt(sy.cos(phi1)**2)): phi1, sy.acos(sy.sqrt(sy.cos(phi2)**2)): phi2}\n",
       "    cos_sub = {(sy.cos(Phi) - 1.0)*(sy.cos(Phi) + 1.0):-sy.sin(Phi)**2}\n",
       "    for sol in range(len(cubic_sols)):\n",
-      "        solSubs[phi1], solSubs[Phi], solSubs[phi2] = cubic_sols[sol][0], cubic_sols[sol][1], cubic_sols[sol][2]\n",
+      "        solSubs[phi1], solSubs[Phi], solSubs[phi2] = tmp_cubic_sols[sol][0], tmp_cubic_sols[sol][1], tmp_cubic_sols[sol][2]\n",
       "        for n in range(-l,l+1):\n",
       "            for s in range(-l,l+1):\n",
       "                index = (sol, s+l, n+l)\n",
@@ -496,7 +517,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -518,7 +539,7 @@
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -534,18 +555,18 @@
        "stream": "stdout",
        "text": [
         "[[  1. +0.j  nan+nanj  nan+nanj   0. +0.j   0. +0.j]\n",
-        " [  0. +0.j  -1. -0.j  nan+nanj  nan+nanj   0. +0.j]\n",
+        " [  0. +0.j   1. +0.j  nan+nanj  nan+nanj   0. +0.j]\n",
         " [  0. +0.j   0. +0.j   1. +0.j  nan+nanj   0. +0.j]\n",
-        " [  0. +0.j   0. +0.j   0. +0.j  -1. +0.j   0. +0.j]\n",
-        " [  0. +0.j   0. +0.j   0. +0.j   0. +0.j   1. -0.j]\n",
-        " [  0. +0.j   0. +0.j   0. +0.j   0. +0.j   1. +0.j]\n",
         " [  0. +0.j   0. +0.j   0. +0.j   1. +0.j   0. +0.j]\n",
+        " [  0. +0.j   0. +0.j   0. +0.j   0. +0.j   1. +0.j]\n",
+        " [  0. +0.j   0. +0.j   0. +0.j   0. +0.j   1. -0.j]\n",
+        " [  0. +0.j   0. +0.j   0. +0.j  -1. +0.j   0. +0.j]\n",
         " [  0. +0.j   0. +0.j   1. +0.j  nan+nanj   0. +0.j]\n",
-        " [  0. +0.j   1. -0.j   0. +0.j  nan+nanj   0. +0.j]]\n"
+        " [  0. +0.j  -1. -0.j   0. +0.j  nan+nanj   0. +0.j]]\n"
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
