--- a/notebooks/homogenization_fiber_2D.ipynb
+++ b/notebooks/homogenization_fiber_2D.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -93,21 +93,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 25, 25)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# from pymks.datasets import make_microstructure\n",
-    "\n",
-    "# X = make_microstructure(size=(25, 25))\n",
-    "# X.shape"
+    "from pymks.datasets import make_microstructure\n",
+    "X = make_microstructure(size=(25, 25),grain_size = (10,1),seed = seed,volume_fraction = (.80,.20))\n",
+    "X.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pymks.tools import draw_microstructures\n",
+    "draw_microstructures(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -183,26 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.7822688652\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.average(stresses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -249,19 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6L, 101L, 101L, 1L)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pymks.tools import draw_correlations\n",
     "\n",
@@ -281,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -348,21 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Order of Polynomial 3\n",
-      "Number of Components 4\n",
-      "Score 0.999253970224\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Order of Polynomial'), (gs.best_estimator_.degree)\n",
     "print('Number of Components'), (gs.best_estimator_.n_components)\n",
@@ -371,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -421,14 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model = gs.best_estimator_\n",
-    "# model.n_components = 7\n",
+    "#model = gs.best_estimator_\n",
+    "model.n_components = 4\n",
+    "model.degree = 3\n",
     "model.fit(data_train.reshape((data_train.shape[0],) + dataset.shape[1:]), moduli_train)"
    ]
   },
@@ -443,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -457,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -505,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -514,12 +511,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Predicted Percent Error 1.78361593707\n",
-      "Mean Training Percent Error 1.73796735692\n"
+      "Mean Predicted Percent Error 1.79726777343\n",
+      "Mean Training Percent Error 1.7217184613\n"
      ]
     }
    ],
    "source": [
+    "_moduli_train = model.predict(data_train.reshape((data_train.shape[0],) + dataset.shape[1:]))\n",
     "pred_percent_error = 100 * np.abs(moduli_predict - moduli_test) / moduli_test\n",
     "train_percent_error = 100 * np.abs(_moduli_train - moduli_train) / moduli_train\n",
     "pred_absolute_error = np.abs(moduli_predict - moduli_test)\n",
@@ -530,23 +528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_absolute_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-65-06ee582f40c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstresses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_absolute_error\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'o'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'#1a9850'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Training Dataset'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstress_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpred_absolute_error\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'o'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'#f46d43'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Testing Dataset'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Effective Stress (MPa)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Abosolute Error (MPa)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_absolute_error' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(stresses.flatten(), train_absolute_error.flatten(), 'o', color='#1a9850', label='Training Dataset')\n",
     "plt.plot(stress_test.flatten(), pred_absolute_error.flatten(), 'o', color='#f46d43', label='Testing Dataset')\n",
@@ -560,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -581,11 +567,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.120282325262\n"
+     ]
+    }
+   ],
    "source": [
     "# Finding the volume fractions of generated microstructures\n",
     "#d1 = sum(sum(dataset[0,:,:]))/(101.0*101.0)\n",
@@ -594,12 +588,13 @@
     "#print Vf.shape\n",
     "for i in range(0,dataset.shape[0]): Vf[i] = sum(sum(dataset[i,:,:]))/(101.0*101.0)\n",
     "macro_strain = 1.0\n",
-    "\n"
+    "\n",
+    "print Vf[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -620,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -647,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -663,19 +658,33 @@
     "Er = (3/8)*(El) + (5/8)*(Et)\n",
     "Er.shape\n",
     "\n",
-    "Halpin_Tsai_moduli = np.concatenate((moduli[None], Er[None]))\n",
+    "Halpin_Tsai_moduli = np.concatenate((moduli[None], El[None]))\n",
     "# Stresses_Halpin_Tsai = Er*macro_strain\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Rule of mixtures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "E_mix_u = (1-Vf)*Em+(Vf)*Ef\n",
+    "Mixtures_upper_moduli = np.concatenate((moduli[None], E_mix_u[None]))\n",
+    "E_mix_l = (Ef*Em)/(((1-Vf)*Ef)+(Vf*Em))\n",
+    "Mixtures_lower_moduli = np.concatenate((moduli[None], E_mix_l[None]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -700,9 +709,18 @@
     "\n",
     "fit_data = np.array([moduli_train, _moduli_train])\n",
     "pred_data = np.array([moduli_test, moduli_predict])\n",
-    "_draw_goodness_of_fit(fit_data, pred_data, Manera_moduli, Halpin_Tsai_moduli,\n",
-    "                      ['Training Data', 'Testing Data', 'Manera', 'Halpin Tsai'])\n"
+    "_draw_goodness_of_fit(fit_data, pred_data, Mixtures_upper_moduli, Halpin_Tsai_moduli,\n",
+    "                      ['Training Data', 'Testing Data', 'ROM', 'Halpin-Tsai'])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
