Update model and plots

--- a/notebooks/homogenization_fiber_2D.ipynb
+++ b/notebooks/homogenization_fiber_2D.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -101,10 +101,10 @@
     {
      "data": {
       "text/plain": [
-       "(10, 25, 25)"
+       "(10L, 25L, 25L)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -205,18 +205,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.7822688652\n"
+     ]
+    }
+   ],
    "source": [
     "print np.average(stresses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -263,11 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6L, 101L, 101L, 1L)\n"
+     ]
+    }
+   ],
    "source": [
     "from pymks.tools import draw_correlations\n",
     "\n",
@@ -287,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -354,11 +370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order of Polynomial 3\n",
+      "Number of Components 4\n",
+      "Score 0.999284649403\n"
+     ]
+    }
+   ],
    "source": [
     "print('Order of Polynomial'), (gs.best_estimator_.degree)\n",
     "print('Number of Components'), (gs.best_estimator_.n_components)\n",
@@ -367,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -440,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -454,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -502,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -511,8 +537,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Predicted Percent Error 1.79726777343\n",
-      "Mean Training Percent Error 1.7217184613\n"
+      "Mean Predicted Percent Error 1.93738584995\n",
+      "Mean Training Percent Error 1.81776891085\n"
      ]
     }
    ],
@@ -528,20 +554,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "plt.plot(stresses.flatten(), train_absolute_error.flatten(), 'o', color='#1a9850', label='Training Dataset')\n",
-    "plt.plot(stress_test.flatten(), pred_absolute_error.flatten(), 'o', color='#f46d43', label='Testing Dataset')\n",
-    "plt.xlabel('Effective Stress (MPa)', fontsize=15)\n",
-    "plt.ylabel('Abosolute Error (MPa)', fontsize=15)\n",
-    "plt.legend(fontsize=12, loc=2)\n",
-    "plt.title('Absolute Error', fontsize=20)\n",
-    "plt.ylim(-0.05, np.max(train_absolute_error) + 0.3)\n",
-    "plt.show()"
+    "# plt.plot(stresses.flatten(), train_absolute_error.flatten(), 'o', color='#1a9850', label='Training Dataset')\n",
+    "# plt.plot(stress_test.flatten(), pred_absolute_error.flatten(), 'o', color='#f46d43', label='Testing Dataset')\n",
+    "# plt.xlabel('Effective Stress (MPa)', fontsize=15)\n",
+    "# plt.ylabel('Abosolute Error (MPa)', fontsize=15)\n",
+    "# plt.legend(fontsize=12, loc=2)\n",
+    "# plt.title('Absolute Error', fontsize=20)\n",
+    "# plt.ylim(-0.05, np.max(train_absolute_error) + 0.3)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -567,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -594,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -615,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -674,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -697,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -709,8 +735,9 @@
     "\n",
     "fit_data = np.array([moduli_train, _moduli_train])\n",
     "pred_data = np.array([moduli_test, moduli_predict])\n",
-    "_draw_goodness_of_fit(fit_data, pred_data, Mixtures_upper_moduli, Halpin_Tsai_moduli,\n",
-    "                      ['Training Data', 'Testing Data', 'ROM', 'Halpin-Tsai'])\n"
+    "_draw_goodness_of_fit([fit_data, pred_data, Mixtures_upper_moduli, Halpin_Tsai_moduli],\n",
+    "                      ['Training Data', 'Testing Data', 'ROM', 'Halpin-Tsai'],\n",
+    "                     legend_location=4)\n"
    ]
   },
   {
